syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "MeterService";

package greet;

// The greeting service definition.
service MetergRPCService {
  // Sends a greeting
  rpc GetMetersBySerialNumber (MeterReadingRequest) returns (MeterReadingResponse);
}

// The request message containing the user's name.
message MeterReadingRequest {
  string serialNumber = 1;
}

message MeterReadingResponse {
	repeated MeterReadingDTO meterReadingDTOs = 1; 
}

// The response message containing the greetings.
message MeterReadingDTO {
  string id = 1;
  string serialNumber = 2;
  google.protobuf.Timestamp readingTime = 3;
  double endIndex = 4;
  double voltage = 5;
  double current = 6;
}


